Terraforming for java 9 + fix